# heiafr-baby-bird-problem

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
include/: Chick.h  Nest.h  Parent.h  PrintThread.h
src/: Chick.cpp  Nest.cpp  Parent.cpp  PrintThread.cpp  main.cpp
